--- a/style/craft.css
+++ b/style/craft.css
@@ -1,19 +1,3 @@
-/* 
-#crafting-grid{
-    display: flex;
-    width: 220px;
-    height: 220px;
-    justify-content: start;
-    flex-wrap: wrap;
-    align-items: start;
-}
-
-.grid-item{
-    border: 1px solid black;
-    height: 70px;
-    width: 70px;
-} */
-
 .mcui {
     display: inline-block;
     position: relative;
@@ -102,4 +86,42 @@
 
 .invslot img {
     width: 100%;
+}
+
+.search_bar {
+    width: 98%;
+    height: 3rem;
+    outline: none;
+
+}
+
+.btn_in_game{
+    display: flex;
+    background: #c6c6c6 no-repeat center center / 64px 64px;
+    border: 4px solid;
+    border-color: #fdfbfc #646e76 #606065 #fdfbfc;
+    box-shadow: 0 0 0 4px #151515;
+    color: #4d4d4d;
+    text-align: left;
+    flex-direction: row;
+    align-items: center;
+    width: 97%;
+    font-size: 2rem;
+    margin: 4px;
+}
+
+.btn_in_game img {
+    width: 64px;
+    height: 64px;
+}
+
+.btn_in_game p {
+    margin: 0;
+    padding: 0 1rem;
+    font-size: 1.5rem;
+}
+
+.shadow_btn {
+    background-color: #8b8b8b;
+    border-color: #606065 #606065 #fff #373737;
 }
