--- a/style/page.css
+++ b/style/page.css
@@ -186,3 +186,25 @@ body {
 .game .start_button {
     display: none!important;
 }
+
+@media (max-width: 800px) {
+    #container {
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+    
+    .game .infos {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .game #wanted {
+        width: 100%;
+        text-align: center;
+    }
+    
+    .game .stop_button, .game .start_button {
+        width: 100%;
+        text-align: center;
+    }
+}
