--- a/style/craft.css
+++ b/style/craft.css
@@ -96,6 +96,7 @@
     width: 97%;
     font-size: 2rem;
     margin: 4px;
+    box-sizing: border-box;
 }
 
 .btn_in_game img {
@@ -107,6 +108,9 @@
     margin: 0;
     padding: 0 1rem;
     font-size: 1.5rem;
+    width: 70%;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
 }
 
 .shadow_btn {
@@ -129,10 +133,15 @@ h1 {
     overflow-wrap: break-word;
 }
 
+#crafting-grid{
+    display: block;
+}
+
 @media (max-width: 600px) {
     .mcui {
         flex-direction: column;
         align-items: center;
+        width: 90vw;
     }
 
     .mcui-Crafting_Table > .mcui-arrow {
@@ -145,7 +154,7 @@ h1 {
     }
 
     .btn_in_game {
-        width: 100%;
+        width: 100%!important;
         justify-content: center;
     }
 
@@ -160,5 +169,9 @@ h1 {
 
     h1 {
         margin: 0;
+    }
+
+    .shadow_btn {
+        display: none;
     }
 }
