--- a/style/page.css
+++ b/style/page.css
@@ -159,6 +159,10 @@ body {
   font-family: 'Minecraftia'!important;
 }
 
+body::-webkit-scrollbar {
+    display: none;
+}
+
 #container {
     width: 100%;
     height: 100%;
@@ -191,6 +195,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 650px;
 }
 
 #search_bar_div {
@@ -201,7 +206,7 @@ body {
 }
 
 #item_selected {
-    width: 50%;
+    width: 30%;
 }
 
 #item_selected img {
@@ -238,5 +243,9 @@ body {
 
     .no_mobile {
         display: none;
-    }    
+    } 
+    
+    #select-item {
+        width: 100%; 
+    }   
 }
