--- a/style/interface.css
+++ b/style/interface.css
@@ -53,6 +53,16 @@ h2 {
     box-sizing: border-box;
 }
 
+#information {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+    width: 80%;
+    overflow: break-word;
+}
+
 .clear_btn:hover {
     background: #9e9e9e no-repeat center center / 64px 64px;
     border-color: #b0b0b0 #6a6a6a #6a6a6a #b0b0b0;
