--- a/style/interface.css
+++ b/style/interface.css
@@ -63,6 +63,13 @@ h2 {
     overflow: break-word;
 }
 
+#information p {
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    white-space: normal;
+    word-break: break-word;
+}
+
 .clear_btn:hover {
     background: #9e9e9e no-repeat center center / 64px 64px;
     border-color: #b0b0b0 #6a6a6a #6a6a6a #b0b0b0;
@@ -70,7 +77,7 @@ h2 {
 
 @media (max-width: 600px) {
     .interface_btn {
-        width: 40%!important;
+        width: 40%;
         padding: 0.5rem;
         font-size: 1.2rem;
     }
