--- a/style/interface.css
+++ b/style/interface.css
@@ -24,6 +24,7 @@
     flex-direction: column;
     align-items: center;
     width: 200px;
+    margin: 0px 10px;
 }
 
 h2 {
@@ -39,8 +40,9 @@ h2 {
     margin: 0.5rem 0;
 }
 
+
 .clear_btn {
-    background: url('../images/cancel.webp') no-repeat center center / 24px 24px;
+    background: url('../images/bin.webp') no-repeat center center / 24px 24px;
     border: 4px solid;
     border-color: #fdfbfc #646e76 #606065 #fdfbfc;
     color: #4d4d4d;
@@ -51,6 +53,31 @@ h2 {
     height: 32px;
     margin: 4px;
     box-sizing: border-box;
+}
+
+.skip_btn {
+    display: none;
+}
+
+.game .skip_btn {
+    display: block;
+    border: 4px solid;
+    background-color: transparent;
+    border-color: #fdfbfc #646e76 #606065 #fdfbfc;
+    color: #4d4d4d;
+    text-decoration: none;
+    text-shadow: none!important;
+    text-align: left;
+    flex-direction: row;
+    align-items: center;
+    height: 32px;
+    margin: 4px;
+    box-sizing: border-box;
+}
+
+.skip_btn:hover {
+    background: #9e9e9e no-repeat center center / 24px 24px;
+    border-color: #b0b0b0 #6a6a6a #6a6a6a #b0b0b0;
 }
 
 #information {
@@ -75,24 +102,33 @@ h2 {
     border-color: #b0b0b0 #6a6a6a #6a6a6a #b0b0b0;
 }
 
+#information_btn {
+    width: 30px!important;
+}
+
 @media (max-width: 600px) {
     .interface_btn {
-        width: 40%;
+        width: 40%!important;
         padding: 0.5rem;
-        font-size: 1.2rem;
+        font-size: 1rem;
+    }
+
+    .infos {
+        width: 50px;
     }
 
     .infos span {
-        font-size: 1.5rem;
+        font-size: 1.2rem;
         margin: 0px 0px;
     }
 
     .infos h2 {
+        font-size: 0.8rem;
         margin: 0px 0px;
     }
 
     .clear_btn:hover {
-        background: url('../images/cancel.webp') no-repeat center center / 24px 24px;
+        background: url('../images/bin.webp') no-repeat center center / 24px 24px;
         border-color: #b0b0b0 #6a6a6a #6a6a6a #b0b0b0;
     }
 
