--- a/style/accueil.css
+++ b/style/accueil.css
@@ -83,7 +83,7 @@ p{
     margin: 10px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 800px) {
     .game-mode-div {
         flex-direction: column;
     }
@@ -109,5 +109,6 @@ p{
     }
     .contact {
         width: 100%;
+        margin: 10px auto;
     }
 }
