--- a/style/page.css
+++ b/style/page.css
@@ -171,6 +171,15 @@ body::-webkit-scrollbar {
     justify-content: space-evenly;
 }
 
+#game-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+
+}
+
 .game #wanted {
     display: block!important;
 }
@@ -231,6 +240,11 @@ body::-webkit-scrollbar {
     #container {
         flex-direction: column-reverse;
         align-items: center;
+    }
+
+    #game-container {
+      flex-direction: column-reverse;
+      align-items: center;
     }
     
     .game .infos {
