--- a/style/accueil.css
+++ b/style/accueil.css
@@ -5,7 +5,7 @@
     justify-content: center;
     width: 100%;
     height: 100%;
-    margin: 30px 0px;
+    margin: 10px 0px;
 
 }
 
@@ -14,7 +14,11 @@
     flex-direction: column;
     align-items: center;
     width: 30%;
-    margin: 20px 50px;
+    margin: 10px 50px;
+}
+
+.game-div p{
+    margin: 20px;
 }
 
 .game-div a {
@@ -36,7 +40,7 @@
 
 #header-text {
     width: 80%;
-    margin: 0 auto;
+    margin: 40px auto;
 }
 
 #contact-list {
