--- a/style/interface.css
+++ b/style/interface.css
@@ -26,7 +26,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 200px;
+    width: 300px;
     margin: 0px 10px;
 }
 
@@ -131,7 +131,11 @@ h2 {
     }
 
     .infos {
-        width: 100px;
+        width: 150px;
+    }
+
+    #timer {
+        width: 70px;
     }
 
     .infos span {
