--- a/style/items_set.css
+++ b/style/items_set.css
@@ -10,6 +10,11 @@
     display: flex!important;
 }
 
+
+.items-set-mode #timer {
+    display: flex!important;
+}
+
 .items-set-mode #prevent-day {
     display: block!important;
     width: 300px;
@@ -39,6 +44,23 @@
     display: flex;
     flex-wrap: wrap;
     gap: 5px;
+}
+
+#end-game .close, .go_home{
+    margin-top: 10px;
+    /* width: 100%!important; */
+}
+
+#end-game p {
+    /* wrap */
+    word-break: break-word;
+    white-space: pre-wrap;
+}
+
+#end-game .buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
 
 @media (max-width: 800px) {
