--- a/style/craft.css
+++ b/style/craft.css
@@ -216,6 +216,10 @@ h1 {
     height: 100%;
 }
 
+.tab-icon {
+    width: 100%;
+}
+
 @media (max-width: 800px) {
     .mcui {
         flex-direction: column;
