--- a/style/items_set.css
+++ b/style/items_set.css
@@ -21,7 +21,7 @@
 }
 
 #prevent-day {
-    height: 100%;
+    /* height: 100%; */
 }
 
 #prevent-day h1 {
@@ -65,6 +65,6 @@
 
 @media (max-width: 800px) {
     .items-set-mode #prevent-day {
-        width: 100%;
+        /* width: 100%; */
     }
 }
