--- a/style/page.css
+++ b/style/page.css
@@ -231,6 +231,14 @@ body::-webkit-scrollbar {
     min-height: 48px;
 }
 
+.long-name p {
+    font-size: 0.4em!important;
+}
+
+.very-long-name p {
+  font-size: 0.3em!important;
+}
+
 #btn_sort {
   width: 48px;
   height: 48px;
