--- a/style/interface.css
+++ b/style/interface.css
@@ -126,6 +126,23 @@ h2 {
     margin-bottom: 10px;
 }
 
+.pseudo{
+    margin: 20px 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+}
+
+.pseudo input {
+    width: auto;
+    padding: 0px;
+    font-size: 1.2rem;
+    border-radius: 4px;
+    height: auto;
+
+}
+
 @media (max-width: 800px) {
     .interface_btn {
         padding: 0.5rem;
